--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "simple-git": "^3.19.0"
+    "simple-git": "^3.19.0",
+    "sqlite3": "^5.1.6"
   }
 }
